# flet-multipage

./: main.py  pyproject.toml
components/: app_bar.py
views/: index.py  router.py  settings.py
