[tool.poetry]
name = "flet-multipage"
version = "0.1.0"
description = "Example multi page flet app"
authors = ["ARodenboog <alfred.rodenboog@hotmail.com>"]
readme = "README.md"
packages = [{include = "flet_multipage"}]

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.4.2"
requests = "^2.28.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
